# rustirator

./: CMakeLists.txt  LICENSE  README.md
include/: rustirator.h
test/: test.cpp
